# xlearn0.44_sample

./: CMakeLists.txt  README.md  readme2.txt
ReDevelopent/: fm_score.cc
cplusplus_fm/demo/: README.md  ctr_dateset.txt.v4.test.demo  ctr_dateset.txt.v4.train.demo
cplusplus_fm/src/: CMakeLists.txt
cplusplus_fm/src.bak.20191025.v1/: readme2.txt
cplusplus_fm/src.bak.20191025.v1/base/: split_string.h
cplusplus_fm/src.bak.20191025.v1/data/: model_parameters.h
cplusplus_fm/src.bak.20191025.v1/score/: score_function.cc
cplusplus_fm/src.bak.20191025.v1/solver/: checker.cc  solver.cc
cplusplus_fm/src/data/: data_structure.h  model_parameters.cc
cplusplus_fm/src/reader/: parser.cc  parser.h
cplusplus_fm/src/solver/: trainer.h
cplusplus_youtubeDnn/: CMakeLists.txt  ReadMe.txt  dataset.sample.txt
cplusplus_youtubeDnn/demo/: README.md  ctr_dateset.youtubeDnn.test.sample.v1.txt.demo  ctr_dateset.youtubeDnn.train.sample.v1.txt.demo
cplusplus_youtubeDnn/src.bak.20191017.v2/data/: model_parameters.cc  model_parameters.h
cplusplus_youtubeDnn/src.bak.20191017.v2/loss/: squared_loss.cc
cplusplus_youtubeDnn/src.bak.20191017.v2/reader/: reader.h
cplusplus_youtubeDnn/src.bak.20191017.v2/score/: youtubeDnn_score.cc  youtubeDnn_score.h
cplusplus_youtubeDnn/src.bak.20191018.v3/base/: CMakeLists.txt
cplusplus_youtubeDnn/src.bak.20191018.v3/data/: model_parameters.cc  model_parameters.h
cplusplus_youtubeDnn/src.bak.20191018.v3/loss/: loss.cc  loss.h
cplusplus_youtubeDnn/src.bak.20191018.v3/score/: CMakeLists.txt  score_function.h  youtubeDnn_score.cc  youtubeDnn_score.h
cplusplus_youtubeDnn/src.bak.20191018.v3/solver/: solver.cc
cplusplus_youtubeDnn/src.bak.20191018.v3/src/data/: hyper_parameters.h
cplusplus_youtubeDnn/src.bak.20191018.v3/src/loss/: cross_entropy_loss.cc
cplusplus_youtubeDnn/src.bak.20191023.v1/base/: file_util.h  split_string.cc
cplusplus_youtubeDnn/src.bak.20191023.v1/data/: hyper_parameters.h  model_parameters.cc  model_parameters.h
cplusplus_youtubeDnn/src.bak.20191023.v1/loss/: cross_entropy_loss.cc  cross_entropy_loss.h  squared_loss.cc
cplusplus_youtubeDnn/src.bak.20191023.v1/reader/: CMakeLists.txt  reader.cc
cplusplus_youtubeDnn/src.bak.20191023.v1/score/: youtubeDnn_score.cc
cplusplus_youtubeDnn/src.bak.20191023.v1/solver/: checker.cc  solver.cc
cplusplus_youtubeDnn/src.bak.20191023.v2/: CMakeLists.txt  readme.txt  readme2.txt
cplusplus_youtubeDnn/src.bak.20191023.v2/data/: CMakeLists.txt  data_structure.h  hyper_parameters.h
cplusplus_youtubeDnn/src.bak.20191023.v2/loss/: loss.cc  loss.h  squared_loss.h
cplusplus_youtubeDnn/src.bak.20191023.v2/score/: score_function.cc  score_function.h  youtubeDnn_score.h
cplusplus_youtubeDnn/src.bak.20191023.v2/solver/: solver.cc  trainer.h
cplusplus_youtubeDnn/src/data/: model_parameters.cc  model_parameters.h
cplusplus_youtubeDnn/src/loss/: cross_entropy_loss.cc  loss.h  metric.h
cplusplus_youtubeDnn/src/score/: score_function.h  youtubeDnn_score.cc
cplusplus_youtubeDnn/src/solver/: CMakeLists.txt  solver.cc  trainer.cc
cplusplus_youtubeDnn_v2/: ReadMe.txt
cplusplus_youtubeDnn_v2/cplusplus_youtubeDnn_v2.20191211/: CMakeLists.txt  train.sh
cplusplus_youtubeDnn_v2/cplusplus_youtubeDnn_v2.20191211/src/base/: CMakeLists.txt  file_util.h  split_string.cpp  split_string.h  stl-util.h  thread_pool.h
cplusplus_youtubeDnn_v2/cplusplus_youtubeDnn_v2.20191211/src/loss/: cross_entropy_loss.cpp  metric.cpp  metric.h
cplusplus_youtubeDnn_v2/cplusplus_youtubeDnn_v2.20191211/src/modelParameter/: CMakeLists.txt  hyperparameters.h  parameters.cpp  parameters.h
cplusplus_youtubeDnn_v2/cplusplus_youtubeDnn_v2.20191211/src/network/: network.cpp  network.h
cplusplus_youtubeDnn_v2/cplusplus_youtubeDnn_v2.20191211/src/reader/: CMakeLists.txt  DMatrix.h  FFMParser.cpp  InmemReader.cpp  reader_test.cpp
cplusplus_youtubeDnn_v2/cplusplus_youtubeDnn_v2.20191211/src/solver/: solver.cpp  solver.h  train_main.cpp
cplusplus_youtubeDnn_v2/cplusplus_youtubeDnn_v2.20200109/: CMakeLists.txt  ReadMe.txt  re_train.sh  train.sh
cplusplus_youtubeDnn_v2/cplusplus_youtubeDnn_v2.20200109/src/base/: file_util.h  math.h  timer.h  util.h
cplusplus_youtubeDnn_v2/cplusplus_youtubeDnn_v2.20200109/src/loss/: CMakeLists.txt  cross_entropy_loss.h
cplusplus_youtubeDnn_v2/cplusplus_youtubeDnn_v2.20200109/src/modelParameter/: hyperparameters.h  parameters.cpp  parameters.h
cplusplus_youtubeDnn_v2/cplusplus_youtubeDnn_v2.20200109/src/network/: CMakeLists.txt
cplusplus_youtubeDnn_v2/cplusplus_youtubeDnn_v2.20200109/src/reader/: FFMParser.h  InmemReader.h
cplusplus_youtubeDnn_v2/cplusplus_youtubeDnn_v2.20200109/src/solver/: CMakeLists.txt  solver.cpp  solver.h  train_main.cpp
demo/classification/criteo_ctr/: run_demo_ctr.sh
jianhua/: Readme.txt
jianhua/src/data/: hyper_parameters.h
jianhua/src/loss/: CMakeLists.txt
jianhua/src/reader/: parser.cc  parser.h
jianhua/src/score/: CMakeLists.txt  fm_score.cc
jianhua/src/solver/: checker.h  solver.h
